lintian (1.23.47) UNRELEASED; urgency=low

  * checks/scripts:
    + [RA] Attempt to quash some Perl warnings.
  * checks/shared-libs:
    + [RA] Move the default ld.so search path into data.  Drop obsolete
      /usr/lib/libg++-dbg, /usr/X11R6/lib/Xaw3d, and libc5 compatibility
      directories in the process.

  * data/shared-libs/ldconfig-dirs:
    + [RA] New file listing directories searched by ld.so.

 -- Russ Allbery <rra@debian.org>  Tue, 04 Mar 2008 13:07:18 -0800

lintian (1.23.46) unstable; urgency=low

  The "five Lintian committers!" release.

  * checks/binaries:
    + [RA] Anchor file matches for Perl libraries and debugging symbols so
      as to not match partial paths.  Based on a patch from Niko Tyni.
      (Closes: #466501)
    + [RA] Also check for make -i when checking if errors from make clean or
      distclean are ignored.  Thanks, Jörg Sommer.  (Closes: #469024)
  * checks/changelog-file:
    + [RA] Adjust for the extra space added by Parse::DebianChangelog when
      checking line length.  Thanks, Robert Millan.  (Closes: #467019)
  * checks/common_data.pm:
    + [RA] Accept (and ignore for now) the new Checksums-Sha1,
      Checksums-Sha256, and Checksums-Md5 fields in source packages.
      Thanks, Raphael Hertzog.  (Closes: #466979)
  * checks/control-file:
    + [RA] Skip empty dependencies for stronger-dependency-implies-weaker.
  * checks/control-files{.desc,}:
    + [FL] Warn about empty control files. I can't see any use for
      them. Exclude udebs though, since they might differ there.
  * checks/copyright-file{.desc,}:
    + [RA] Tests for copyright notices must be case-insensitive.  Patch
      from Chris Lamb.  (Closes: #464992)
    + [RA] When looking for cases where Copyright is separated from a year
      by a newline, also allow (C) before or after the newline.  Thanks,
      Michael Meskes.  (Closes: #465258)
    + [RA] Further explain why lintian looks for a valid copyright notice.
      (Closes: #466714)