@@ -32,6 +32,7 @@ I: libbaz2-dbg: no-md5sums-control-file
 I: libbaz2-dev: no-md5sums-control-file
 I: libbaz2: no-md5sums-control-file
 N: 4 tags overridden (4 warnings)
+W: ia32-libbaz2: new-package-should-close-itp-bug
 W: libbaz source: ancient-standards-version 3.2.1 (current is 3.7.3)
 W: libbaz source: changelog-should-mention-nmu
 W: libbaz source: native-package-with-dash-version
